# toots

./: .gitignore  Cargo.toml  README.md  justfile
i18n/en/: cosmic_ext_toot.ftl
i18n/nl/: cosmic_ext_toot.ftl
i18n/sv/: toot.ftl
res/: app.desktop
src/: app.rs  error.rs  main.rs  pages.rs  subscriptions.rs  utils.rs
src/pages/: home.rs  mod.rs  notifications.rs  public.rs
src/subscriptions/: home.rs  notifications.rs  public.rs
src/widgets/: account.rs  mod.rs  notification.rs  status.rs
