[package]
name = "cosmic-ext-toot"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/edfloreshz/toot"

[dependencies]
capitalize = "0.3.4"
futures-util = "0.3.31"
html2text = "0.13.4"
i18n-embed-fl = "0.9.2"
keytar = "0.1.6"
open = "5.3.0"
reqwest = "0.12.9"
rust-embed = "8.5.0"
thiserror = "2.0.3"
time = "0.3.36"
tracing = "0.1.40"

[dependencies.mastodon-async]
git = "https://github.com/edfloreshz-ext/mastodon-async"
features = ["all"]

[dependencies.serde]
version = "1.0.215"
features = ["derive"]

[dependencies.chrono]
version = "0.4.38"
features = ["serde"]

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["env-filter"]

[dependencies.i18n-embed]
version = "0.15"
features = ["fluent-system", "desktop-requester"]

[dependencies.libcosmic]
git = "https://github.com/pop-os/libcosmic.git"
# See https://github.com/pop-os/libcosmic/blob/master/Cargo.toml for available features.
features = [
    # Accessibility support
    "a11y",
    # Uses cosmic-settings-daemon to watch for config file changes
    "dbus-config",
    # Support creating additional application windows.
    "multi-window",
    # On app startup, focuses an existing instance if the app is already open
    "single-instance",
    # Uses tokio as the executor for the runtime
    "tokio",
    # Windowing support for X11, Windows, Mac, & Redox
    "winit",
    # Add Wayland support to winit
    "wayland",
    # About context drawer support
    "about",
]

# Uncomment to test a locally-cloned libcosmic
# [patch.'https://github.com/pop-os/libcosmic']
# libcosmic = { path = "../libcosmic" }
# cosmic-config = { path = "../libcosmic/cosmic-config" }
# cosmic-theme = { path = "../libcosmic/cosmic-theme" }
